--- a/src/app/emails/emails.component.html
+++ b/src/app/emails/emails.component.html
@@ -40,10 +40,10 @@
       />
 
       <app-select-input
-        id="gender"
-        label="النوع"
-        [options]="genderValues"
-        (valueChange)="onInputChange($event, 'gender')"
+        id="college"
+        label="الكلية"
+        [options]="collegeValues"
+        (valueChange)="onInputChange($event, 'college')"
       />
     </div>
     <div class="m-16">
