--- a/src/app/expenses/pay-installments/pay-installments.component.html
+++ b/src/app/expenses/pay-installments/pay-installments.component.html
@@ -5,7 +5,7 @@
   @for (requirement of requirements; track $index) {
   <app-installments-talbe
     [requirement]="requirement"
-    [installments]="requirement.installments!"
+    [installments]="requirement.legacyInstallments!"
   />
   }
 </section>
