--- a/src/app/reports/input/input.component.html
+++ b/src/app/reports/input/input.component.html
@@ -7,6 +7,7 @@
     [id]="id()"
     [name]="id()"
     [type]="type()"
+    [value]="value"
     minlength="1"
     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5 placeholder-gray-300 gray-700"
     placeholder="{{ placeholder() }}"
