--- a/src/app/main/select-input/select-input.component.html
+++ b/src/app/main/select-input/select-input.component.html
@@ -6,36 +6,29 @@
   <input
     type="text"
     [(ngModel)]="inputValue"
-    (focus)="showDropdown = true"
+    (focus)="!disabled() && (showDropdown = true)"
     (blur)="onBlur()"
-    (input)="filterOptions()"
+    (input)="!disabled() && filterOptions()"
     placeholder="اختر {{ label() }}"
-    [formControl]="control()"
+    [attr.disabled]="disabled() ? true : null"
+    [readonly]="disabled()"
+    [class.bg-gray-200]="disabled()"
+    [class.cursor-not-allowed]="disabled()"
     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-cyan-500 focus:border-cyan-500 block w-full p-2.5 gray-700 placeholder-gray-400"
   />
 
-  @if (showDropdown && filteredOptions.length > 0) {
-  <ul
-    class="absolute bg-white border mt-1 w-full z-10 max-h-96 overflow-y-auto"
-  >
-    @for (option of filteredOptions; track $index) {
-
-    <li
-      (mousedown)="selectOption(option)"
-      class="px-2 py-1 hover:bg-gray-100 cursor-pointer border-2 border-gray-200"
+  @if (showDropdown && filteredOptions.length > 0 && !disabled()) {
+    <ul
+      class="absolute bg-white border mt-1 w-full z-10 max-h-96 overflow-y-auto"
     >
-      {{ option }}
-    </li>
-    }
-  </ul>
-  } @if (control().invalid && (control().dirty || control().touched)) {
-  <div class="alert mt-1">
-    @if (control().hasError('required')) {
-
-    <p class="text-red-500 text-xs italic">قم بإدخال قيمه لهذا الحقل</p>
-    } @if(control().hasError('invalidValue')) {
-    <p class="text-red-500 text-xs italic">يجب اختيار قيمة صالحة</p>
-    }
-  </div>
+      @for (option of filteredOptions; track $index) {
+        <li
+          (mousedown)="selectOption(option)"
+          class="px-2 py-1 hover:bg-gray-100 cursor-pointer border-2 border-gray-200"
+        >
+          {{ option }}
+        </li>
+      }
+    </ul>
   }
 </div>
